# otcv8

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  init.lua  vcpkg.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-android.yml  build-on-request.yml  build-ubuntu.yml  build-windows.yml  ci-cd.yml  pr-test.yml
android/otclientv8/: otclientv8.androidproj
android/otclientv8_lib/: otclientv8_lib.vcxproj
mods/game_healthbars/: healthbars.otmod
modules/client_background/: background.lua
modules/client_entergame/: entergame.lua  entergame.otmod
modules/client_feedback/: feedback.lua  feedback.otmod
modules/client_mobile/: mobile.otmod
modules/client_options/: game.otui  graphics.otui  options.lua
modules/client_stats/: stats.lua  stats.otmod
modules/corelib/: http.lua
modules/corelib/ui/: uiminiwindow.lua
modules/crash_reporter/: crash_reporter.otmod
modules/game_battle/: battle.otmod
modules/game_bot/: bot.lua  bot.otmod  edit.otui
modules/game_bot/default_configs/cavebot_1.3/: cavebot.lua  main.lua
modules/game_bot/default_configs/cavebot_1.3/targetbot/: creature_editor.otui  looting.otui
modules/game_bot/default_configs/vBot_4.7/targetbot/: creature_editor.otui
modules/game_bot/default_configs/vBot_4.7/vBot/: cavebot.lua  combo.otui
modules/game_bot/default_configs/vBot_4.8/cavebot/: editor.otui
modules/game_bot/default_configs/vBot_4.8/vBot/: BotServer.lua
modules/game_bot/functions/: server.lua
modules/game_buttons/: buttons.otmod
modules/game_imbuing/: imbuing.otmod
modules/game_prey/: prey.otmod
modules/game_protocol/: protocol.otmod
modules/game_questlog/: questlog.lua
modules/game_shaders/: shaders.otmod
modules/game_shop/: shop.otmod
modules/game_stats/: stats.otmod
modules/game_walking/: walking.otmod
modules/updater/: updater.otmod
src/: CMakeLists.txt  main.cpp
src/client/: animatedtext.cpp  animator.cpp  creature.cpp  effect.h  game.cpp  game.h  global.h  lightview.cpp  minimap.cpp  protocolgame.cpp  protocolgame.h  thingtypemanager.h  tile.cpp
src/framework/: const.h  luafunctions.cpp  pch.h
src/framework/core/: application.cpp  application.h  logger.cpp  resourcemanager.cpp  resourcemanager.h
src/framework/graphics/: drawqueue.cpp  glutil.h
src/framework/http/: http.cpp  http.h
src/framework/input/: mouse.h
src/framework/net/: connection.cpp  connection.h  declarations.h  packet_player.cpp  packet_player.h  protocol.cpp  protocol.h  server.cpp
src/framework/otml/: otmlparser.cpp
src/framework/platform/: androidwindow.cpp  win32crashhandler.cpp  win32platform.cpp  win32window.cpp
src/framework/proxy/: proxy.cpp  proxy.h  proxy_client.cpp  proxy_client.h
src/framework/sound/: streamsoundsource.cpp
src/framework/stdext/: net.cpp  string.cpp  string.h  uri.cpp
src/framework/ui/: uitranslator.cpp
src/framework/util/: crypt.cpp  crypt.h
vc16/: otclient.sln  otclient.vcxproj
vc17/: otclient.sln  otclient.vcxproj  settings.props
